--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,6 @@
 @import "./base";
+@import "./elements/typo";
 @import "./elements/header";
+@import "./elements/quem-somos";
 @import "./elements/hero";
 @import "./elements/footer";
