--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -8,8 +8,13 @@ html {
   scroll-behavior: smooth;
 }
 
+@font-face {
+  font-family: Rustica;
+  src: url("./../../rustico.otf");
+}
+
 // Colors
-$red-dark: #780000;
+$bg: #f4f2ec;
 $red-normal: #9d1515;
 $black-dark: #222;
 $black-normal: #555;
@@ -27,15 +32,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Raleway", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: $black-normal;
   font-size: 1.125rem;
   line-height: 130%;
-}
-
-h1 {
-  color: whitesmoke;
-  font-size: 5rem;
 }
 
 // Responsividade
@@ -81,20 +81,15 @@ h1 {
   }
 }
 
-.cont-ux {
-  max-width: 65%;
-  margin: 0 auto;
-  padding: 0px 20px;
-
-  border: 1px solid green;
-
-  @include responsive(s) {
-    flex-direction: column;
-    padding: 32px 18px;
-    max-width: 100%;
-  }
+main {
+  background-color: $bg;
 }
 
 img {
   max-width: 100%;
+}
+
+ul {
+  list-style: none;
+  display: flex;
 }
