--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -93,3 +93,23 @@ ul {
   list-style: none;
   display: flex;
 }
+
+.btn {
+  padding: 20px;
+  background-color: #222;
+  display: inline-flex;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
+  margin-top: 40px;
+  text-transform: uppercase;
+  font-weight: bold;
+
+  transition: 0.3s ease;
+  img {
+    margin-left: 20px;
+  }
+  &:hover {
+    opacity: 0.7;
+  }
+}
