--- a/assets/css/elements/_hero.scss
+++ b/assets/css/elements/_hero.scss
@@ -5,7 +5,7 @@
   background-size: cover;
 
   height: 100vh;
-  width: 100vw;
+  width: calc(100vw - 18px);
 
   display: flex;
   justify-content: center;
@@ -18,4 +18,9 @@
       opacity: 0.6;
     }
   }
+}
+
+.logo {
+  margin-bottom: 20px;
+  max-width: 200px;
 }
