--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,9 @@
 @import "./base";
 @import "./elements/typo";
 @import "./elements/header";
-@import "./elements/quem-somos";
 @import "./elements/hero";
+@import "./elements/quem-somos";
+@import "./elements/sobre";
+@import "./elements/num";
+@import "./elements/ajude";
 @import "./elements/footer";
