--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,4 +6,5 @@
 @import "./elements/sobre";
 @import "./elements/num";
 @import "./elements/ajude";
+@import "./elements/marcas";
 @import "./elements/footer";
