--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,6 +261,25 @@ header a {
   gap: 20px;
 }
 
+.parceiros,
+.patrocinadores,
+.apoiadores {
+  margin-top: 120px;
+}
+
+.marcas {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin-top: 5rem;
+}
+
+.marca {
+  background-color: #aaa;
+  padding: 20px;
+  max-width: 344px;
+}
+
 footer {
   background-color: #222;
   display: flex;
@@ -268,6 +287,7 @@ footer {
   justify-content: center;
   flex-direction: column;
   padding: 40px 0;
+  margin-top: 120px;
 }
 footer .footer-logo {
   max-width: 200px;
