--- a/assets/css/elements/_header.scss
+++ b/assets/css/elements/_header.scss
@@ -2,13 +2,31 @@ header {
   position: fixed;
   top: 0;
   display: flex;
+  align-items: center;
+  justify-content: center;
   text-transform: uppercase;
   padding: 40px 0;
+  width: 100%;
+  z-index: 1000;
   ul {
     gap: 40px;
   }
   a {
     text-decoration: none;
     color: #ffffff;
+    &:hover {
+      text-decoration: underline;
+    }
   }
+  @include responsive(s) {
+    display: none;
+  }
+}
+
+.active-header {
+  background-color: rgba(34, 34, 34, 0.75);
+  box-shadow: 0px 51px 80px rgba(169, 80, 196, 0.08),
+    0px 15.375px 24.1177px rgba(169, 80, 196, 0.0521271),
+    0px 6.38599px 10.0172px rgba(169, 80, 196, 0.04),
+    0px 2.30969px 3.62304px rgba(169, 80, 196, 0.0278729);
 }
