--- a/assets/css/elements/_num.scss
+++ b/assets/css/elements/_num.scss
@@ -4,6 +4,10 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  @include responsive(s) {
+    grid-template-columns: 1fr;
+    padding: 0 20px;
+  }
 }
 .num-card {
   padding: 20px;
