--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,7 @@
 @import "./elements/quem-somos";
 @import "./elements/sobre";
 @import "./elements/num";
+@import "./elements/galeria";
 @import "./elements/ajude";
 @import "./elements/marcas";
 @import "./elements/footer";
