--- a/assets/css/elements/_quem-somos.scss
+++ b/assets/css/elements/_quem-somos.scss
@@ -4,4 +4,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
+  @include responsive(s) {
+    grid-template-columns: 1fr;
+    padding: 0 20px;
+  }
 }
