--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
 @media screen and (max-width: 960px) {
   .container {
     flex-direction: column;
-    padding: 32px 18px;
+    padding: 32px 0px;
   }
 }
 
@@ -104,6 +104,7 @@ h2 {
     font-family: "Rustico", serif;
     font-size: 60px;
     line-height: 120%;
+    margin-bottom: 4rem;
   }
 }
 
@@ -182,8 +183,12 @@ header {
   position: fixed;
   top: 0;
   display: flex;
+  align-items: center;
+  justify-content: center;
   text-transform: uppercase;
   padding: 40px 0;
+  width: 100%;
+  z-index: 1000;
 }
 header ul {
   gap: 40px;
@@ -191,6 +196,19 @@ header ul {
 header a {
   text-decoration: none;
   color: #ffffff;
+}
+header a:hover {
+  text-decoration: underline;
+}
+@media screen and (max-width: 960px) {
+  header {
+    display: none;
+  }
+}
+
+.active-header {
+  background-color: rgba(34, 34, 34, 0.75);
+  box-shadow: 0px 51px 80px rgba(169, 80, 196, 0.08), 0px 15.375px 24.1177px rgba(169, 80, 196, 0.0521271), 0px 6.38599px 10.0172px rgba(169, 80, 196, 0.04), 0px 2.30969px 3.62304px rgba(169, 80, 196, 0.0278729);
 }
 
 .hero {
@@ -211,6 +229,11 @@ header a {
 .hero a:hover {
   opacity: 0.6;
 }
+@media screen and (max-width: 960px) {
+  .hero {
+    display: none;
+  }
+}
 
 .logo {
   margin-bottom: 20px;
@@ -224,6 +247,12 @@ header a {
   grid-template-columns: 1fr 1fr;
   gap: 20px;
 }
+@media screen and (max-width: 960px) {
+  .quem-somos {
+    grid-template-columns: 1fr;
+    padding: 0 20px;
+  }
+}
 
 .sobre {
   margin-top: 120px;
@@ -231,6 +260,12 @@ header a {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
+}
+@media screen and (max-width: 960px) {
+  .sobre {
+    grid-template-columns: 1fr;
+    padding: 0 20px;
+  }
 }
 
 .numeros {
@@ -240,10 +275,41 @@ header a {
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
 }
+@media screen and (max-width: 960px) {
+  .numeros {
+    grid-template-columns: 1fr;
+    padding: 0 20px;
+  }
+}
 
 .num-card {
   padding: 20px;
   background-color: #fff;
+}
+
+.galeria {
+  margin-top: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.galeria span {
+  left: 50%;
+  transform: translate(-50%);
+}
+.galeria ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+.galeria ul img {
+  max-width: 100%;
+}
+@media screen and (max-width: 960px) {
+  .galeria {
+    display: none;
+  }
 }
 
 .ajude {
@@ -272,6 +338,11 @@ header a {
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   margin-top: 5rem;
+}
+@media screen and (max-width: 960px) {
+  .marcas {
+    display: none;
+  }
 }
 
 .marca {
