--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -96,12 +96,14 @@ ul {
 
 .btn {
   padding: 20px;
+  margin-top: 40px;
   background-color: #222;
+  color: #fff;
+
   display: inline-flex;
   align-items: center;
+  text-align: center;
   text-decoration: none;
-  color: #fff;
-  margin-top: 40px;
   text-transform: uppercase;
   font-weight: bold;
 
