--- a/assets/css/elements/_ajude.scss
+++ b/assets/css/elements/_ajude.scss
@@ -10,5 +10,8 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    @include responsive(s) {
+      align-items: flex-start;
+    }
   }
 }
