--- a/assets/css/elements/_marcas.scss
+++ b/assets/css/elements/_marcas.scss
@@ -2,6 +2,10 @@
 .patrocinadores,
 .apoiadores {
   margin-top: 120px;
+
+  @include responsive(s) {
+    padding: 0px 20px;
+  }
 }
 
 .marcas {
@@ -10,7 +14,7 @@
   gap: 20px;
   margin-top: 5rem;
   @include responsive(s) {
-    display: none;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
