--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,12 +51,13 @@ ul {
 
 .btn {
   padding: 20px;
+  margin-top: 40px;
   background-color: #222;
+  color: #fff;
   display: inline-flex;
   align-items: center;
+  text-align: center;
   text-decoration: none;
-  color: #fff;
-  margin-top: 40px;
   text-transform: uppercase;
   font-weight: bold;
   transition: 0.3s ease;
@@ -102,20 +103,29 @@ h2 {
 @media screen and (max-width: 960px) {
   h2 {
     font-family: "Rustico", serif;
-    font-size: 60px;
+    font-size: 80px;
     line-height: 120%;
-    margin-bottom: 4rem;
+    text-align: center;
+    margin-bottom: 0rem;
   }
 }
 
 span {
   font-family: "Montserrat", sans-serif;
+  line-height: 100%;
   font-size: 3rem;
   color: #222;
   left: 60px;
   top: -10px;
   z-index: 10;
   position: absolute;
+}
+@media screen and (max-width: 960px) {
+  span {
+    left: 0;
+    top: 50%;
+    transform: translateY(-80%);
+  }
 }
 
 h3 {
@@ -218,6 +228,7 @@ header .header-logo {
     width: 100%;
     height: 0;
     right: 0;
+    top: 70px;
     background: #222;
     z-index: 1000;
     transition: 0.6s;
@@ -231,7 +242,7 @@ header .header-logo {
     overflow-y: auto;
   }
   header #menu a {
-    padding: 1rem 0;
+    padding: 1rem 20px;
     display: block;
     margin: 0 1rem;
     border-bottom: 2px solid rgba(0, 0, 0, 0.05);
@@ -261,7 +272,6 @@ header .header-logo {
   border-radius: 4px;
   text-transform: uppercase;
   font-size: 1rem;
-  font-weight: bold;
   color: #fff;
   cursor: pointer;
   align-items: center;
@@ -334,6 +344,14 @@ header .header-logo {
 .logo {
   margin-bottom: 20px;
   max-width: 200px;
+}
+
+@media screen and (max-width: 960px) {
+  .sec-txt {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .quem-somos {
@@ -422,11 +440,23 @@ header .header-logo {
   align-items: center;
   gap: 20px;
 }
+@media screen and (max-width: 960px) {
+  .ajude ul {
+    align-items: flex-start;
+  }
+}
 
 .parceiros,
 .patrocinadores,
 .apoiadores {
   margin-top: 120px;
+}
+@media screen and (max-width: 960px) {
+  .parceiros,
+.patrocinadores,
+.apoiadores {
+    padding: 0px 20px;
+  }
 }
 
 .marcas {
@@ -437,7 +467,7 @@ header .header-logo {
 }
 @media screen and (max-width: 960px) {
   .marcas {
-    display: none;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
