--- a/assets/css/elements/_typo.scss
+++ b/assets/css/elements/_typo.scss
@@ -95,7 +95,7 @@ span {
   font-size: 3rem;
   color: $black-dark;
   left: 60px;
-  top: -10px;
+  top: 1rem;
   z-index: 10;
   position: absolute;
   @include responsive(s) {
