--- a/assets/css/elements/_galeria.scss
+++ b/assets/css/elements/_galeria.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  padding: 0 60px;
 
   span {
     left: 50%;
@@ -13,12 +14,16 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+
+    @include responsive(s) {
+      grid-template-columns: 1fr;
+    }
     img {
       max-width: 100%;
     }
   }
 
   @include responsive(s) {
-    display: none;
+    padding: 0 60px;
   }
 }
