--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,6 +407,7 @@ header .header-logo {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  padding: 0 60px;
 }
 .galeria span {
   left: 50%;
@@ -417,12 +418,17 @@ header .header-logo {
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
 }
+@media screen and (max-width: 960px) {
+  .galeria ul {
+    grid-template-columns: 1fr;
+  }
+}
 .galeria ul img {
   max-width: 100%;
 }
 @media screen and (max-width: 960px) {
   .galeria {
-    display: none;
+    padding: 0 60px;
   }
 }
 
@@ -450,6 +456,7 @@ header .header-logo {
 .patrocinadores,
 .apoiadores {
   margin-top: 120px;
+  padding: 0 60px;
 }
 @media screen and (max-width: 960px) {
   .parceiros,
