fix: remove display flex to al ul tags

--- a/assets/css/elements/_footer.scss
+++ b/assets/css/elements/_footer.scss
@@ -14,6 +14,9 @@ footer {
     img {
       max-width: 50px;
     }
+    > ul {
+      display: flex;
+    }
   }
   a {
     transition: 0.3s ease;
