--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -10,7 +10,7 @@ html {
 
 @font-face {
   font-family: Rustica;
-  src: url("./../../rustico.otf");
+  src: url('../fonts/rustico.otf');
 }
 
 // Colors
@@ -29,10 +29,7 @@ $container-s: 540px;
 body {
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: $black-normal;
   font-size: 1.125rem;
   line-height: 130%;
@@ -91,7 +88,6 @@ img {
 
 ul {
   list-style: none;
-  display: flex;
 }
 
 .btn {
