--- a/assets/css/elements/_header.scss
+++ b/assets/css/elements/_header.scss
@@ -77,6 +77,7 @@
 
 .active-header {
   background-color: rgba(34, 34, 34, 0.75);
+  backdrop-filter: blur(5px);
   @include responsive(s) {
     background-color: #222;
   }
