--- a/assets/css/elements/_hero.scss
+++ b/assets/css/elements/_hero.scss
@@ -1,9 +1,8 @@
 .hero {
-  background-image: url('./../img/bg-hero.png');
-  background-repeat: no-repeat;
-  background-position: center;
+  background: url('./../img/bg-hero.png') no-repeat center 20%;
   background-size: cover;
 
+  min-height: 33rem;
   height: 100vh;
   width: calc(100vw - 18px);
 
