--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,8 +90,6 @@ h2 {
           margin-block-start: 0em;
   -webkit-margin-after: 0em;
           margin-block-end: 0em;
-  z-index: 100;
-  position: relative;
   font-family: "Rustico", serif;
   font-size: 100px;
   line-height: 120%;
@@ -254,6 +252,8 @@ a {
 
 .active-header {
   background-color: rgba(34, 34, 34, 0.75);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
 }
 @media screen and (max-width: 960px) {
   .active-header {
@@ -315,10 +315,9 @@ a {
 }
 
 .hero {
-  background-image: url("./../img/bg-hero.png");
-  background-repeat: no-repeat;
-  background-position: center;
+  background: url("./../img/bg-hero.png") no-repeat center 20%;
   background-size: cover;
+  min-height: 33rem;
   height: 100vh;
   width: calc(100vw - 18px);
   display: flex;
