feat(quem-somos): add title styles

--- a/assets/css/elements/_hero.scss
+++ b/assets/css/elements/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: url('./../img/bg-hero.png') no-repeat center 20%;
+  background: url('./../img/bg-hero.jpg') no-repeat center 20%;
   background-size: cover;
 
   min-height: 33rem;
