--- a/assets/css/elements/_typo.scss
+++ b/assets/css/elements/_typo.scss
@@ -75,7 +75,7 @@ h1 {
 
 h2 {
   font-weight: 700;
-  color: #ffffff !important;
+  color: #ffffff;
   padding-bottom: 20px;
   margin-block-start: 0em;
   margin-block-end: 0em;
