--- a/assets/css/elements/_quem-somos.scss
+++ b/assets/css/elements/_quem-somos.scss
@@ -2,7 +2,7 @@
   margin-top: 120px;
   padding: 0 60px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 0.8fr 1fr;
   gap: 20px;
 
   @include responsive(s) {
@@ -25,6 +25,49 @@
       text-transform: uppercase;
       display: block;
       margin-bottom: -1.125rem;
+    }
+  }
+
+  .sec-txt {
+    p {
+      margin-bottom: 1rem;
+      font-size: 1.125rem;
+      line-height: 1.75rem;
+
+      a {
+        color: inherit;
+        font-weight: 400;
+        color: #555555;
+        transition: color 300ms ease;
+
+        &:hover {
+          color: #7e7e7e;
+        }
+      }
+    }
+  }
+
+  .sec-img {
+    display: grid;
+    grid-template-columns: 1fr 0.8fr 0.2fr;
+    grid-template-rows: repeat(2, 18.75rem) 6.25rem;
+    gap: 1.5rem;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    :first-child {
+      grid-column: 1 / 2;
+      grid-row: 1 / 3;
+    }
+    :nth-child(2) {
+      grid-column: 2 / 4;
+    }
+    :last-child {
+      grid-column: 2 / 3;
+      grid-row: 2 / 4;
     }
   }
 }
