--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,7 +357,7 @@ a {
   margin-top: 120px;
   padding: 0 60px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 0.8fr 1fr;
   gap: 20px;
 }
 @media screen and (max-width: 960px) {
@@ -381,6 +381,43 @@ a {
   text-transform: uppercase;
   display: block;
   margin-bottom: -1.125rem;
+}
+.quem-somos .sec-txt p {
+  margin-bottom: 1rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.quem-somos .sec-txt p a {
+  color: inherit;
+  font-weight: 400;
+  color: #555555;
+  transition: color 300ms ease;
+}
+.quem-somos .sec-txt p a:hover {
+  color: #7e7e7e;
+}
+.quem-somos .sec-img {
+  display: grid;
+  grid-template-columns: 1fr 0.8fr 0.2fr;
+  grid-template-rows: repeat(2, 18.75rem) 6.25rem;
+  gap: 1.5rem;
+}
+.quem-somos .sec-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.quem-somos .sec-img :first-child {
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+.quem-somos .sec-img :nth-child(2) {
+  grid-column: 2/4;
+}
+.quem-somos .sec-img :last-child {
+  grid-column: 2/3;
+  grid-row: 2/4;
 }
 
 .sobre {
