fix(quem-somos): header over title when scroll by id

--- a/assets/css/elements/_header.scss
+++ b/assets/css/elements/_header.scss
@@ -7,7 +7,7 @@
   justify-content: center;
 
   text-transform: uppercase;
-  padding: 40px 0;
+  padding: 1.25rem 0;
   width: 100%;
   z-index: 1000;
 
