--- a/assets/css/elements/_hero.scss
+++ b/assets/css/elements/_hero.scss
@@ -5,6 +5,7 @@
   min-height: 33rem;
   height: 100vh;
   width: calc(100vw - 18px);
+  margin-bottom: 7.5rem;
 
   display: flex;
   justify-content: center;
