--- a/assets/css/elements/_quem-somos.scss
+++ b/assets/css/elements/_quem-somos.scss
@@ -1,6 +1,5 @@
 .quem-somos {
-  margin-top: 120px;
-  padding: 0 60px;
+  padding: 0 3.75rem;
   display: grid;
   grid-template-columns: 0.8fr 1fr;
   gap: 20px;
