--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,7 @@ a {
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
-  padding: 40px 0;
+  padding: 1.25rem 0;
   width: 100%;
   z-index: 1000;
 }
@@ -320,6 +320,7 @@ a {
   min-height: 33rem;
   height: 100vh;
   width: calc(100vw - 18px);
+  margin-bottom: 7.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -354,8 +355,7 @@ a {
 }
 
 .quem-somos {
-  margin-top: 120px;
-  padding: 0 60px;
+  padding: 0 3.75rem;
   display: grid;
   grid-template-columns: 0.8fr 1fr;
   gap: 20px;
