--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,73 @@ ul {
   opacity: 0.7;
 }
 
+.sobre h2, .quem-somos h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 3.75rem;
+  font-weight: 700;
+  color: #222222;
+}
+.sobre h2 span, .quem-somos h2 span {
+  font-family: "Rustico", sans-serif;
+  font-weight: 400;
+  font-size: 4.5rem;
+  color: #fff;
+  text-transform: uppercase;
+  display: block;
+  margin-bottom: -1rem;
+}
+
+.sobre, .quem-somos {
+  padding: 0 3.75rem;
+  margin-bottom: 7.5rem;
+  display: grid;
+  grid-template-columns: 0.8fr 1fr;
+  gap: 1.25rem;
+}
+@media screen and (max-width: 960px) {
+  .sobre, .quem-somos {
+    grid-template-columns: 1fr;
+    padding: 0 1.25rem;
+  }
+}
+.sobre .sec-txt p, .quem-somos .sec-txt p {
+  margin-bottom: 1rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.sobre .sec-txt p a, .quem-somos .sec-txt p a {
+  color: inherit;
+  font-weight: 400;
+  color: #555555;
+  transition: color 300ms ease;
+}
+.sobre .sec-txt p a:hover, .quem-somos .sec-txt p a:hover {
+  color: #7e7e7e;
+}
+.sobre .sec-img, .quem-somos .sec-img {
+  display: grid;
+  grid-template-columns: 0.75fr 0.8fr 0.2fr;
+  grid-template-rows: repeat(2, 18.75rem) 6.25rem;
+  gap: 1.5rem;
+}
+.sobre .sec-img img, .quem-somos .sec-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.sobre .sec-img :first-child, .quem-somos .sec-img :first-child {
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+.sobre .sec-img :nth-child(2), .quem-somos .sec-img :nth-child(2) {
+  grid-column: 2/4;
+}
+.sobre .sec-img :last-child, .quem-somos .sec-img :last-child {
+  grid-column: 2/3;
+  grid-row: 2/4;
+}
+
 h1 {
   font-style: italic;
   font-weight: 700;
@@ -354,84 +421,23 @@ a {
   }
 }
 
-.quem-somos {
-  padding: 0 3.75rem;
-  display: grid;
-  grid-template-columns: 0.8fr 1fr;
-  gap: 20px;
-}
-@media screen and (max-width: 960px) {
-  .quem-somos {
-    grid-template-columns: 1fr;
-    padding: 0 20px;
-  }
-}
-.quem-somos h2 {
-  font-family: "Montserrat", sans-serif;
-  font-size: 3.75rem;
-  font-weight: 700;
-  color: #222222;
-  text-transform: capitalize;
-}
-.quem-somos h2 span {
-  font-family: "Rustico", sans-serif;
-  font-weight: 400;
-  font-size: 4rem;
-  color: #fff;
-  text-transform: uppercase;
-  display: block;
-  margin-bottom: -1.125rem;
-}
-.quem-somos .sec-txt p {
-  margin-bottom: 1rem;
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-.quem-somos .sec-txt p a {
-  color: inherit;
-  font-weight: 400;
-  color: #555555;
-  transition: color 300ms ease;
-}
-.quem-somos .sec-txt p a:hover {
-  color: #7e7e7e;
-}
-.quem-somos .sec-img {
-  display: grid;
-  grid-template-columns: 1fr 0.8fr 0.2fr;
-  grid-template-rows: repeat(2, 18.75rem) 6.25rem;
-  gap: 1.5rem;
-}
-.quem-somos .sec-img img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.quem-somos .sec-img :first-child {
-  grid-column: 1/2;
-  grid-row: 1/3;
-}
-.quem-somos .sec-img :nth-child(2) {
-  grid-column: 2/4;
-}
-.quem-somos .sec-img :last-child {
-  grid-column: 2/3;
-  grid-row: 2/4;
-}
-
 .sobre {
-  margin-top: 120px;
-  padding: 0 60px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
+  grid-template-columns: 1fr 0.8fr;
 }
-@media screen and (max-width: 960px) {
-  .sobre {
-    grid-template-columns: 1fr;
-    padding: 0 20px;
-  }
+.sobre h2 {
+  position: relative;
+  z-index: 2;
+  margin-bottom: 1rem;
+}
+.sobre h2 span {
+  margin: 0;
+  width: 50%;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  text-align: center;
 }
 
 .numeros {
