--- a/assets/css/elements/_sobre.scss
+++ b/assets/css/elements/_sobre.scss
@@ -4,19 +4,9 @@
 
   h2 {
     @extend %section-title;
-    position: relative;
-    z-index: 2;
-    margin-bottom: 1rem;
 
     span {
-      margin: 0;
-      width: 50%;
-      position: absolute;
-      z-index: -1;
-      top: 50%;
-      left: 50%;
-      transform: translateY(-50%) translateX(-50%);
-      text-align: center;
+      @extend %section-background-title;
     }
   }
 }
