--- a/assets/css/elements/_ajude.scss
+++ b/assets/css/elements/_ajude.scss
@@ -1,15 +1,24 @@
 .ajude {
-  margin-top: 120px;
-  padding: 0 60px;
+  padding: 0 3.75rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  h2 {
+    @extend %section-title;
+
+    span {
+      @extend %section-background-title;
+    }
+  }
+
   ul {
-    list-style: unset;
+    list-style: none;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+
     @include responsive(s) {
       align-items: flex-start;
     }
