--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,13 +65,16 @@ ul {
   opacity: 0.7;
 }
 
-.sobre h2, .quem-somos h2 {
+.ajude h2, .sobre h2, .quem-somos h2 {
   font-family: "Montserrat", sans-serif;
   font-size: 3.75rem;
   font-weight: 700;
   color: #222222;
+  position: relative;
+  z-index: 2;
+  margin-bottom: 1rem;
 }
-.sobre h2 span, .quem-somos h2 span {
+.ajude h2 span, .sobre h2 span, .quem-somos h2 span {
   font-family: "Rustico", sans-serif;
   font-weight: 400;
   font-size: 4.5rem;
@@ -79,6 +82,17 @@ ul {
   text-transform: uppercase;
   display: block;
   margin-bottom: -1rem;
+}
+
+.ajude h2 span, .sobre h2 span {
+  margin: 0;
+  width: 50%;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  text-align: center;
 }
 
 .sobre, .quem-somos {
@@ -424,22 +438,6 @@ a {
 .sobre {
   grid-template-columns: 1fr 0.8fr;
 }
-.sobre h2 {
-  position: relative;
-  z-index: 2;
-  margin-bottom: 1rem;
-}
-.sobre h2 span {
-  margin: 0;
-  width: 50%;
-  position: absolute;
-  z-index: -1;
-  top: 50%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
-  text-align: center;
-}
-
 .numeros {
   margin-top: 120px;
   padding: 0 60px;
@@ -461,6 +459,7 @@ a {
 
 .galeria {
   margin-top: 120px;
+  margin-bottom: 7.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -491,14 +490,13 @@ a {
 }
 
 .ajude {
-  margin-top: 120px;
-  padding: 0 60px;
+  padding: 0 3.75rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .ajude ul {
-  list-style: unset;
+  list-style: none;
   display: flex;
   flex-direction: column;
   align-items: center;
