--- a/assets/css/elements/_num.scss
+++ b/assets/css/elements/_num.scss
@@ -1,15 +1,28 @@
 .numeros {
-  margin-top: 120px;
-  padding: 0 60px;
+  margin-top: 7.5rem;
+  padding: 0 3.75rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  gap: 1.25rem;
+
   @include responsive(s) {
     grid-template-columns: 1fr;
-    padding: 0 20px;
+    padding: 0 1.25rem;
+    justify-items: center;
+  }
+
+  > h2 {
+    text-align: center;
+    grid-column: 1 / -1;
+    font-size: 3.75rem;
+    font-family: 'Montserrat', sans-serif;
+    color: #222222;
   }
 }
+
 .num-card {
-  padding: 20px;
+  width: 100%;
+  max-width: 30rem;
+  padding: 1.25rem;
   background-color: #fff;
 }
