feat: add section title styles

--- a/assets/css/elements/_ajude.scss
+++ b/assets/css/elements/_ajude.scss
@@ -6,21 +6,29 @@
 
   h2 {
     @extend %section-title;
+    margin-bottom: 2rem;
 
     span {
       @extend %section-background-title;
     }
   }
 
-  ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
+  &__content {
+    h3 {
+      text-align: start;
+      margin-bottom: 1.5rem;
+    }
 
-    @include responsive(s) {
-      align-items: flex-start;
+    ul {
+      list-style: disc;
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+      padding-left: 1.25rem;
+
+      @include responsive(s) {
+        align-items: flex-start;
+      }
     }
   }
 }
