--- a/assets/css/elements/_galeria.scss
+++ b/assets/css/elements/_galeria.scss
@@ -6,6 +6,17 @@
   justify-content: center;
   flex-direction: column;
   padding: 0 60px;
+  position: relative;
+
+  h2 {
+    @extend %section-title;
+    margin-bottom: 2rem;
+
+    span {
+      @extend %section-background-title;
+      width: auto;
+    }
+  }
   span {
     left: 50%;
     transform: translate(-50%);
