--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -71,9 +71,10 @@ body {
   width: 95%;
   margin: 0 auto;
 
-  border: 1px solid red;
+  // border: 1px solid red;
 
   @include responsive(s) {
+    width: 90%;
     flex-direction: column;
     padding: 32px 0px;
   }
@@ -176,6 +177,7 @@ ul {
     grid-template-columns: 1fr;
     padding: 0;
     row-gap: 2rem;
+    padding: 0;
   }
 
   .sec-txt {
@@ -223,5 +225,21 @@ ul {
       grid-column: 2 / 3;
       grid-row: 2 / 4;
     }
+
+    @include responsive(s) {
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+
+      :first-child,
+      :nth-child(2),
+      :last-child {
+        grid-column: 1 / -1;
+        display: none;
+      }
+      :first-child {
+        display: block;
+      }
+    }
   }
+
 }
