--- a/assets/css/elements/_marcas.scss
+++ b/assets/css/elements/_marcas.scss
@@ -5,7 +5,7 @@
   padding: 0 60px;
 
   @include responsive(s) {
-    padding: 0px 20px;
+    padding: 0;
 
     h4 {
       font-size: min(2.5rem, 10vw);
