fix(hero): big logo in desktop screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -467,6 +467,7 @@ a {
   gap: 0.75rem;
 }
 .hero a {
+  display: block;
   transition: 0.3s ease;
 }
 .hero a:hover {
@@ -475,12 +476,24 @@ a {
 .hero .hero-nav > ul {
   display: flex;
 }
+@media screen and (max-width: 960px) {
+  .hero .hero-nav > ul a {
+    width: 3.125rem;
+    height: 3.125rem;
+  }
+}
 .hero .hero-logo {
+  max-width: 22.5rem;
   width: 90%;
 }
 .hero .hero-logo img {
   display: block;
   width: 100%;
+}
+@media screen and (max-width: 960px) {
+  .hero .hero-logo {
+    max-width: 18rem;
+  }
 }
 @media screen and (max-width: 960px) {
   .hero {
