--- a/assets/css/elements/_hero.scss
+++ b/assets/css/elements/_hero.scss
@@ -14,6 +14,7 @@
   gap: 0.75rem;
 
   a {
+    display: block;
     transition: 0.3s ease;
     &:hover {
       opacity: 0.6;
@@ -22,14 +23,26 @@
 
   .hero-nav > ul {
     display: flex;
+
+    @include responsive(s) {
+      a {
+        width: 3.125rem;
+        height: 3.125rem;
+      }
+    }
   }
 
   .hero-logo {
+    max-width: 22.5rem;
     width: 90%;
 
     img {
       display: block;
       width: 100%;
+    }
+
+    @include responsive (s) {
+      max-width: 18rem;
     }
   }
 
