feat(header): decrease padding when is active

--- a/assets/css/elements/_header.scss
+++ b/assets/css/elements/_header.scss
@@ -7,9 +7,11 @@
   justify-content: center;
 
   text-transform: uppercase;
-  padding: 1.25rem 0;
+  padding: 2rem 0;
   width: 100%;
   z-index: 1000;
+
+  transition: padding 300ms ease;
 
   ul {
     gap: 40px;
@@ -31,6 +33,10 @@
     justify-content: space-between;
     background-color: #222;
     padding: 10px 20px;
+
+    &.active-header {
+      padding: 10px 20px;
+    }
 
     #btn-mobile {
       display: flex;
@@ -78,6 +84,7 @@
 .active-header {
   background-color: rgba(34, 34, 34, 0.75);
   backdrop-filter: blur(5px);
+  padding: 1.25rem 0;
   @include responsive(s) {
     background-color: #222;
   }
