--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,9 +329,10 @@ a {
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
-  padding: 1.25rem 0;
+  padding: 2rem 0;
   width: 100%;
   z-index: 1000;
+  transition: padding 300ms ease;
 }
 .header ul {
   gap: 40px;
@@ -351,6 +352,9 @@ a {
   .header {
     justify-content: space-between;
     background-color: #222;
+    padding: 10px 20px;
+  }
+  .header.active-header {
     padding: 10px 20px;
   }
   .header #btn-mobile {
@@ -393,6 +397,7 @@ a {
   background-color: rgba(34, 34, 34, 0.75);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
+  padding: 1.25rem 0;
 }
 @media screen and (max-width: 960px) {
   .active-header {
