--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -683,4 +683,16 @@ footer a {
 }
 footer a:hover {
   opacity: 0.6;
+}
+footer .footer-credits {
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 2rem;
+  color: #fff;
+  line-height: 140%;
+}
+footer .footer-credits a {
+  font-size: 1.125em;
+  color: inherit;
 }/*# sourceMappingURL=style.css.map */
