--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ ul {
   opacity: 0.7;
 }
 
-.ajude h2, .galeria h2, .sobre h2, .quem-somos h2 {
+.sigam-nos h2, .ajude h2, .galeria h2, .sobre h2, .quem-somos h2 {
   font-family: "Montserrat", sans-serif;
   font-size: 3.75rem;
   font-weight: 700;
@@ -77,7 +77,7 @@ ul {
   margin-bottom: 1rem;
   text-align: center;
 }
-.ajude h2 span, .galeria h2 span, .sobre h2 span, .quem-somos h2 span {
+.sigam-nos h2 span, .ajude h2 span, .galeria h2 span, .sobre h2 span, .quem-somos h2 span {
   font-family: "Rustico", sans-serif;
   font-weight: 400;
   font-size: 4.5rem;
@@ -88,37 +88,37 @@ ul {
   margin-bottom: -1rem;
 }
 @media screen and (max-width: 1140px) and (min-width: 960px) {
-  .ajude h2 span, .galeria h2 span, .sobre h2 span, .quem-somos h2 span {
+  .sigam-nos h2 span, .ajude h2 span, .galeria h2 span, .sobre h2 span, .quem-somos h2 span {
     font-size: 3.75rem;
   }
 }
 @media screen and (max-width: 960px) {
-  .ajude h2 span, .galeria h2 span, .sobre h2 span, .quem-somos h2 span {
+  .sigam-nos h2 span, .ajude h2 span, .galeria h2 span, .sobre h2 span, .quem-somos h2 span {
     font-size: 3.5rem;
   }
 }
 @media screen and (max-width: 540px) {
-  .ajude h2 span, .galeria h2 span, .sobre h2 span, .quem-somos h2 span {
+  .sigam-nos h2 span, .ajude h2 span, .galeria h2 span, .sobre h2 span, .quem-somos h2 span {
     font-size: 3rem;
   }
 }
 @media screen and (max-width: 1140px) and (min-width: 960px) {
-  .ajude h2, .galeria h2, .sobre h2, .quem-somos h2 {
+  .sigam-nos h2, .ajude h2, .galeria h2, .sobre h2, .quem-somos h2 {
     font-size: 3.25rem;
   }
 }
 @media screen and (max-width: 960px) {
-  .ajude h2, .galeria h2, .sobre h2, .quem-somos h2 {
+  .sigam-nos h2, .ajude h2, .galeria h2, .sobre h2, .quem-somos h2 {
     font-size: 3rem;
   }
 }
 @media screen and (max-width: 540px) {
-  .ajude h2, .galeria h2, .sobre h2, .quem-somos h2 {
+  .sigam-nos h2, .ajude h2, .galeria h2, .sobre h2, .quem-somos h2 {
     font-size: 2.5rem;
   }
 }
 
-.ajude h2 span, .galeria h2 span, .sobre h2 span {
+.sigam-nos h2 span, .ajude h2 span, .galeria h2 span, .sobre h2 span {
   margin: 0;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -697,4 +697,45 @@ footer .footer-credits {
 footer .footer-credits a {
   font-size: 1.125em;
   color: inherit;
+}
+
+.sigam-nos {
+  margin-bottom: 7.5rem;
+}
+.sigam-nos h2 {
+  margin-bottom: 5rem;
+  font-size: 3rem;
+}
+@media screen and (max-width: 960px) {
+  .sigam-nos h2 {
+    font-size: 2.5rem;
+  }
+}
+.sigam-nos h2 span {
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+}
+@media screen and (max-width: 960px) {
+  .sigam-nos h2 span {
+    font-size: 4.5rem;
+    line-height: 3.5rem;
+  }
+}
+.sigam-nos .instagram-iframe {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+}
+.sigam-nos .instagram-iframe > iframe {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }/*# sourceMappingURL=style.css.map */
