--- a/assets/css/elements/_hero.scss
+++ b/assets/css/elements/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: url('./../img/bg-hero.jpg') no-repeat center 20%;
+  background: var(--image-url) no-repeat center 20%;
   background-size: cover;
 
   min-height: 35rem;
